# EEG_DL_Classification

./: .gitattributes  .gitignore  Best_Model_C247-Project-EEG-CNN.ipynb  C247-Project-EEG-GAN-CNN.ipynb  C247-Project-EEG-LSTM.ipynb  Comparison_Plots.ipynb  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
artifacts/: data_comparison.json  data_manifest.json  gpu_smoke_results.json
data/processed/: X_test.npy  X_train_valid.npy  person_test.npy  person_train_valid.npy  y_test.npy  y_train_valid.npy
docs/: api.md  data.md  index.md  installation.md  reproduce.md  results.md
docs/api/: augmentation.md  bci2a.md  cli.md  config.md  constants.md  data.md  index.md  plotting.md  preprocessing.md
docs/api/models/: index.md  jax.md  pytorch.md  tensorflow.md
docs/examples/: 00_data_postprocessing.ipynb  01_tensorflow_reproduction.ipynb  02_pytorch_reproduction.ipynb  03_jax_reproduction.ipynb  index.md
notebooks/: 00_data_postprocessing.ipynb  01_tensorflow_reproduction.ipynb  02_pytorch_reproduction.ipynb  03_jax_reproduction.ipynb
notebooks/legacy/: C247-Project-EEG-CNN-LSTM.ipynb  C247-Project-EEG-CNN.ipynb
scripts/: compare_processed_data.py  download_bci2a.py  prepare_bci2a_subset.py  train_eegclassify.py
src/eegclassify/: __init__.py  augmentation.py  bci2a.py  cli.py  config.py  constants.py  data.py  plotting.py  preprocessing.py
src/eegclassify/models/: __init__.py  jax.py  pytorch.py  tensorflow.py
src/eegclassify/resources/: __init__.py  bci2a_course_split.json
tests/: conftest.py  test_augmentation.py  test_data.py  test_framework_smoke.py  test_preprocessing.py
